# hackerhotel-2024-firmware-esp32c6

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  partitions.csv  partitions.ods  sdkconfig  sdkconfig_4mb
.github/workflows/: cd-release.yml  ci-build.yml
components/addon-printer/: CMakeLists.txt  README.md  printer.c
components/addon-printer/include/: printer.h
components/badge-communication/: CMakeLists.txt  badge-communication.c  badge_comms.c  badge_comms_example.c  ieee802154.c  readme.md
components/badge-communication/include/: badge-communication-ieee802154.h  badge-communication-protocol.h  badge-communication.h  badge_messages.h
components/badge-communication/priv_include/: ieee802154.h  ieee802154_header.h
components/badge_comms/: CMakeLists.txt  badge_comms.c  badge_comms_example.c  ieee802154.c
components/badge_comms/include/: badge_comms.h  badge_messages.h
components/badge_comms/priv_include/: ieee802154_header.h
components/bus-i2c/: CMakeLists.txt  README.md  managed_i2c.c
components/bus-i2c/include/: managed_i2c.h
components/ch32/: CMakeLists.txt  ch32.c  ch32_ll.c  ch32_programmer.c
components/ch32/ch32asm/: ch32_readmem.S  ch32_writemem.S  compile-all.py  compile.py
components/ch32/include/: ch32.h
components/debug-tools/: CMakeLists.txt  hextools.c
components/debug-tools/include/: hextools.h
components/drv2605/: CMakeLists.txt  drv2605.c
components/drv2605/include/: drv2605.h
components/epaper/: CMakeLists.txt  epaper.c  epaper_lut.c  epaper_read_lut.c
components/epaper/include/: epaper.h
components/gui-toolkit/: CMakeLists.txt  graphics_wrapper.c  gui_element_header.c  menu.c
components/gui-toolkit/include/: graphics_wrapper.h  gui_element_header.h  menu.h
components/hackerhotel2024-bsp/: CMakeLists.txt  LICENSE  README.md  bsp.c  bsp_lut.c  task_button_input_handler.c  task_keyboard.c
components/hackerhotel2024-bsp/include/: bsp.h  bsp_lut.h  coprocessor.h  events.h  hardware.h  task_button_input_handler.h  task_keyboard.h  task_term_input_handler.h
components/hackerhotel2024-wifi/: CMakeLists.txt  README.md  wifi_cert.c  wifi_connect.c  wifi_connection.c  wifi_defaults.c  wifi_ota.c  wifi_test.c
components/hackerhotel2024-wifi/include/: wifi_connect.h  wifi_connection.h  wifi_defaults.h  wifi_test.h
components/hackerhotel2024-wifi/resources/: custom_ota_cert.pem
components/ledstrip/: CMakeLists.txt  led_strip_encoder.c  ledstrip.c
components/ledstrip/include/: led_strip_encoder.h  ledstrip.h
components/mma8452q/: CMakeLists.txt  mma8452q.c
components/mma8452q/include/: mma8452q.h
components/saigaimusen/: CMakeLists.txt  ieee802154.c
components/sid/: sid.c
components/sid/include/: sid.h
luttool/: index.html  index.js
luttool10/: index.html  index.js
luttool7/: index.css  index.js
main/: CMakeLists.txt  application.c  application.h  application_settings.c  application_settings.h  board.c  board.h  events.h  libcsid.h  libcsidlight.c  main.c  resources.h
main/include/: hextools.h
main/modules/: screen_battleship.c  screen_battleship.h  screen_billboard.c  screen_billboard.h  screen_hangman.c  screen_hangman.h  screen_home.c  screen_home.h  screen_library.c  screen_library.h  screen_mascots.c  screen_mascots.h  screen_pointclick.c  screen_pointclick.h  screen_repertoire.c  screen_repertoire.h  screen_scrambled.c  screen_scrambled.h  screen_settings.c  screen_settings.h  screen_shades.c  screen_shades.h  screen_template.c  screen_template.h  screen_test.c  screen_test.h  screens.h  textedit.c  textedit.h  wordlist.c  wordlist.h
main/tasks/: task_keyboard.c  task_keyboard.h  task_term_input_handler.c
resources/hangman/: Deibler03.png:Zone.Identifier  Deibler_logo.png:Zone.Identifier
resources/pointclick/: end_d3.png:Zone.Identifier  end_d4.png:Zone.Identifier
tools/: generate_tls_cert.sh
