FILE(GLOB task_srcs tasks/*.c)
FILE(GLOB module_srcs modules/*.c)

idf_component_register(
    SRCS "main.c"
         "application.c"
         "application_settings.c"
         ${task_srcs}
         ${module_srcs}
    INCLUDE_DIRS "."
                 "tasks"
                 "modules"
    EMBED_FILES ${project_dir}/resources/bodgeteam.png
                ${project_dir}/resources/textedit.png
                ${project_dir}/resources/capslock.png
                ${project_dir}/resources/special.png
                ${project_dir}/resources/page1.png
                ${project_dir}/resources/page2.png
                ${project_dir}/resources/page3.png
                ${project_dir}/resources/mascots.png
                ${project_dir}/resources/shades.png
                ${project_dir}/resources/homescreen.png
                ${project_dir}/resources/settings.png
                ${project_dir}/resources/border1.png
                ${project_dir}/resources/border2.png
                ${project_dir}/resources/caronl.png
                ${project_dir}/resources/caronv.png
                ${project_dir}/resources/carond.png
                ${project_dir}/resources/switchframe1.png
                ${project_dir}/resources/switchframe2.png
                ${project_dir}/resources/border2lsw.png
                ${project_dir}/resources/border2lrsw.png
                ${project_dir}/resources/library.png
                ${project_dir}/resources/battery1.png
                ${project_dir}/resources/battery2.png
                ${project_dir}/resources/pointclick/dock1n.png
                ${project_dir}/resources/pointclick/dock1e.png
                ${project_dir}/resources/pointclick/dock1s.png
                ${project_dir}/resources/pointclick/dock1w.png
                ${project_dir}/resources/pointclick/dock2n.png
                ${project_dir}/resources/pointclick/dock2e.png
                ${project_dir}/resources/pointclick/dock2s.png
                ${project_dir}/resources/pointclick/dock2w.png
                ${project_dir}/resources/pointclick/dune1n.png
                ${project_dir}/resources/pointclick/dune1s.png
                ${project_dir}/resources/pointclick/dune2n.png
                ${project_dir}/resources/pointclick/dune2s.png
                ${project_dir}/resources/sprites/b_arrow1.png
                ${project_dir}/resources/sprites/b_arrow2.png
                ${project_dir}/resources/sprites/b_arrow1t.png
                ${project_dir}/resources/sprites/circl12.png
                ${project_dir}/resources/sprites/diamondl.png
                ${project_dir}/resources/sprites/diamondr.png
                ${project_dir}/resources/sprites/diamondt.png
                ${project_dir}/resources/sprites/diamondb.png
                ${project_dir}/resources/sprites/squi1.png
                ${project_dir}/resources/sprites/squi2.png
                ${project_dir}/resources/hangman/deibler01.png
                ${project_dir}/resources/hangman/deibler02.png
                ${project_dir}/resources/hangman/deibler03.png
                ${project_dir}/resources/hangman/deibler04.png
                ${project_dir}/resources/hangman/deibler05.png
                ${project_dir}/resources/hangman/deibler06.png
                ${project_dir}/resources/hangman/deibler07.png
                ${project_dir}/resources/hangman/deibler08.png
                ${project_dir}/resources/hangman/deibler09.png
                ${project_dir}/resources/hangman/deibler10.png
                ${project_dir}/resources/hangman/deiblerl.png
                ${project_dir}/resources/hangman/deiblers.png
)
