FILE(GLOB task_srcs tasks/*.c)
FILE(GLOB module_srcs modules/*.c)

idf_component_register(
    SRCS "main.c"
         "application.c"
         "application_settings.c"
         ${task_srcs}
         ${module_srcs}
    INCLUDE_DIRS "."
                 "tasks"
                 "modules"
    EMBED_FILES ${project_dir}/resources/bodgeteam.png
                ${project_dir}/resources/textedit.png
                ${project_dir}/resources/capslock.png
                ${project_dir}/resources/special.png
                ${project_dir}/resources/page1.png
                ${project_dir}/resources/page2.png
                ${project_dir}/resources/page3.png
                ${project_dir}/resources/mascots.png
                ${project_dir}/resources/shades.png
                ${project_dir}/resources/homescreen.png
                ${project_dir}/resources/settings.png
                ${project_dir}/resources/border1.png
                ${project_dir}/resources/border2.png
                ${project_dir}/resources/caronl.png
                ${project_dir}/resources/caronv.png
                ${project_dir}/resources/carond.png
                ${project_dir}/resources/switchframe1.png
                ${project_dir}/resources/switchframe2.png
                ${project_dir}/resources/border2lsw.png
                ${project_dir}/resources/border2lrsw.png
                ${project_dir}/resources/library.png
                ${project_dir}/resources/battery1.png
                ${project_dir}/resources/battery2.png
                ${project_dir}/resources/map.png
                ${project_dir}/resources/lutdial.png
                ${project_dir}/resources/pointclick/dock1_e.png
               ${project_dir}/resources/pointclick/dock1_n.png
               ${project_dir}/resources/pointclick/dock1_s.png
               ${project_dir}/resources/pointclick/dock1_w_d1.png
               ${project_dir}/resources/pointclick/dock1_w_d2.png
               ${project_dir}/resources/pointclick/dock1_w.png
               ${project_dir}/resources/pointclick/dock2_e.png
               ${project_dir}/resources/pointclick/dock2_n.png
               ${project_dir}/resources/pointclick/dock2_s.png
               ${project_dir}/resources/pointclick/dock2_w.png
               ${project_dir}/resources/pointclick/dune1_n.png
               ${project_dir}/resources/pointclick/dune1_s.png
               ${project_dir}/resources/pointclick/dune2_n_d1.png
               ${project_dir}/resources/pointclick/dune2_n.png
               ${project_dir}/resources/pointclick/dune2_s.png
               ${project_dir}/resources/pointclick/dune3_n_gc_d1.png
               ${project_dir}/resources/pointclick/dune3_n_gc_d2.png
               ${project_dir}/resources/pointclick/dune3_n_gc_d3.png
               ${project_dir}/resources/pointclick/dune3_n_gc_d4.png
               ${project_dir}/resources/pointclick/dune3_n_gc.png
               ${project_dir}/resources/pointclick/dune3_n_gc_up.png
               ${project_dir}/resources/pointclick/dune3_n_go.png
               ${project_dir}/resources/pointclick/dune3_n_go_up.png
               ${project_dir}/resources/pointclick/dune3_s.png
               ${project_dir}/resources/pointclick/land1_e.png
               ${project_dir}/resources/pointclick/land1_n.png
               ${project_dir}/resources/pointclick/land1_s.png
               ${project_dir}/resources/pointclick/land1_w.png
               ${project_dir}/resources/pointclick/library_closeup_d1.png
               ${project_dir}/resources/pointclick/library_closeup.png
               ${project_dir}/resources/pointclick/lighthouse1_n_gc_d1_key.png
               ${project_dir}/resources/pointclick/lighthouse1_n_gc_d1.png
               ${project_dir}/resources/pointclick/lighthouse1_n_gc_d2_key.png
               ${project_dir}/resources/pointclick/lighthouse1_n_gc.png
               ${project_dir}/resources/pointclick/lighthouse1_n_go.png
               ${project_dir}/resources/pointclick/lighthouse1_s.png
               ${project_dir}/resources/pointclick/lighthouse2_e.png
               ${project_dir}/resources/pointclick/lighthouse2_n_go.png
               ${project_dir}/resources/pointclick/lighthouse2_n.png
               ${project_dir}/resources/pointclick/lighthouse2_s.png
               ${project_dir}/resources/pointclick/lighthouse2_w.png
               ${project_dir}/resources/pointclick/messageboard_closeup.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d10.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d11.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d12.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d13.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d1.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d2.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d3.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d4.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d5.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d6.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d7.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d8.png
               ${project_dir}/resources/pointclick/postoffice_closeup_d9.png
               ${project_dir}/resources/pointclick/road1_e_jorge_d1.png
               ${project_dir}/resources/pointclick/road1_e_jorge_d2.png
               ${project_dir}/resources/pointclick/road1_e_jorge_d3.png
               ${project_dir}/resources/pointclick/road1_e_jorge_d4.png
               ${project_dir}/resources/pointclick/road1_e_jorge_d5.png
               ${project_dir}/resources/pointclick/road1_e_jorge_d6.png
               ${project_dir}/resources/pointclick/road1_e_jorge_d7.png
               ${project_dir}/resources/pointclick/road1_e_jorge.png
               ${project_dir}/resources/pointclick/road1_e.png
               ${project_dir}/resources/pointclick/road1_n_go.png
               ${project_dir}/resources/pointclick/road1_n.png
               ${project_dir}/resources/pointclick/road1_w.png
               ${project_dir}/resources/pointclick/shop_closeup_d10a.png
               ${project_dir}/resources/pointclick/shop_closeup_d11a.png
               ${project_dir}/resources/pointclick/shop_closeup_d12a.png
               ${project_dir}/resources/pointclick/shop_closeup_d13a.png
               ${project_dir}/resources/pointclick/shop_closeup_d14a.png
               ${project_dir}/resources/pointclick/shop_closeup_d15a.png
               ${project_dir}/resources/pointclick/shop_closeup_d1a.png
                ${project_dir}/resources/pointclick/shop_closeup_d1.png
                ${project_dir}/resources/pointclick/shop_closeup_d2a.png
                ${project_dir}/resources/pointclick/shop_closeup_d2.png
                ${project_dir}/resources/pointclick/shop_closeup_d3a.png
                ${project_dir}/resources/pointclick/shop_closeup_d3.png
                ${project_dir}/resources/pointclick/shop_closeup_d4a.png
                ${project_dir}/resources/pointclick/shop_closeup_d4.png
                ${project_dir}/resources/pointclick/shop_closeup_d5a.png
                ${project_dir}/resources/pointclick/shop_closeup_d6a.png
                ${project_dir}/resources/pointclick/shop_closeup_d7a.png
                ${project_dir}/resources/pointclick/shop_closeup_d8a.png
                ${project_dir}/resources/pointclick/shop_closeup_d9a.png
                ${project_dir}/resources/pointclick/shop_closeup.png
                ${project_dir}/resources/pointclick/town1_e_d1.png
                ${project_dir}/resources/pointclick/town1_e.png
                ${project_dir}/resources/pointclick/town1_n_d1.png
                ${project_dir}/resources/pointclick/town1_n.png
                ${project_dir}/resources/pointclick/town1_s_d1_boat.png
                ${project_dir}/resources/pointclick/town1_s_d1_messageboard.png
                ${project_dir}/resources/pointclick/town1_s.png
                ${project_dir}/resources/pointclick/town1_w.png
                ${project_dir}/resources/pointclick/town2_n.png
                ${project_dir}/resources/pointclick/town2_s.png
                ${project_dir}/resources/sprites/b_arrow1.png
                ${project_dir}/resources/sprites/b_arrow2.png
                ${project_dir}/resources/sprites/b_arrow1t.png
                ${project_dir}/resources/sprites/circl12.png
                ${project_dir}/resources/sprites/diamondl.png
                ${project_dir}/resources/sprites/diamondr.png
                ${project_dir}/resources/sprites/diamondt.png
                ${project_dir}/resources/sprites/diamondb.png
                ${project_dir}/resources/sprites/squi1.png
                ${project_dir}/resources/sprites/squi2.png
                ${project_dir}/resources/hangman/deibler01.png
                ${project_dir}/resources/hangman/deibler02.png
                ${project_dir}/resources/hangman/deibler03.png
                ${project_dir}/resources/hangman/deibler04.png
                ${project_dir}/resources/hangman/deibler05.png
                ${project_dir}/resources/hangman/deibler06.png
                ${project_dir}/resources/hangman/deibler07.png
                ${project_dir}/resources/hangman/deibler08.png
                ${project_dir}/resources/hangman/deibler09.png
                ${project_dir}/resources/hangman/deibler10.png
                ${project_dir}/resources/hangman/deiblerl.png
                ${project_dir}/resources/hangman/deiblers.png
)
