idf_component_register(
    SRCS "bsp.c" "task_button_input_handler.c" "task_keyboard.c" "task_term_input_handler.c"
    INCLUDE_DIRS "." "include"
    EMBED_FILES "resources/ch32_firmware.bin"
                "resources/hackerhotel.png"
    REQUIRES
        "riscv"
        "sdmmc"
        "fatfs"
        "nvs_flash"
        "esp_adc"
        "bus-i2c"
        "epaper"
        "ch32"
        "epaper"
        "pax-gfx"
        "pax-codecs"
        "ledstrip"
        "app_update"
        "badge-communication"
)
